# waveshare

./: .gitignore  CMakeLists.txt  README.md  idf_component.yml  partitions.csv  partitions.release.csv  sdkconfig.defaults  sdkconfig.release.defaults
client/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
components/app_core/: CMakeLists.txt
components/app_core/include/: aiqa_assistant_profile.h  aiqa_boot_gesture.h  aiqa_conversation_memory.h  aiqa_datetime.h  aiqa_device_intent.h  aiqa_dialogue_view.h  aiqa_events.h  aiqa_hardening.h  aiqa_language.h  aiqa_local_command.h  aiqa_ptt_button.h  aiqa_state_machine.h  aiqa_tts_pcm_buffer.h  aiqa_tts_playback_policy.h
components/app_core/src/: aiqa_assistant_profile.c  aiqa_boot_gesture.c  aiqa_conversation_memory.c  aiqa_datetime.c  aiqa_device_intent.c  aiqa_dialogue_view.c  aiqa_hardening.c  aiqa_language.c  aiqa_local_command.c  aiqa_ptt_button.c  aiqa_state_machine.c  aiqa_tts_pcm_buffer.c  aiqa_tts_playback_policy.c
components/app_runtime/: CMakeLists.txt
components/app_runtime/include/: aiqa_device_intent_controller.h  aiqa_runtime.h  aiqa_runtime_events.h  aiqa_runtime_recording.h  aiqa_runtime_ui.h
components/app_runtime/src/: aiqa_device_intent_controller.c  aiqa_runtime.c  aiqa_runtime_events.c  aiqa_runtime_recording.c  aiqa_runtime_ui.c
components/audio_capture/: CMakeLists.txt  idf_component.yml
components/audio_capture/include/: aiqa_audio_capture.h  aiqa_audio_capture_hw.h  aiqa_audio_playback.h  aiqa_audio_playback_hw.h
components/audio_capture/src/: aiqa_audio_capture.c  aiqa_audio_capture_hw.c  aiqa_audio_i2s_bus.c  aiqa_audio_i2s_bus.h  aiqa_audio_playback.c  aiqa_audio_playback_hw.c
components/management_transport/: CMakeLists.txt
components/management_transport/include/: aiqa_management_protocol.h  aiqa_management_wire.h  aiqa_pairing_rpc.h  aiqa_usb_management.h
components/management_transport/src/: aiqa_management_protocol.c  aiqa_management_wire.c  aiqa_pairing_rpc.c  aiqa_usb_management.c
contracts/: device-management.schema.json
docs/: IMPLEMENTATION_PLAN.md
main/: CMakeLists.txt  app_main.c
tests/: mbedtls_host.py  (+31 more)
(+134 files in other folders)
