idf_component_register(
    SRCS
        "src/aiqa_conversation_memory.c"
        "src/aiqa_assistant_profile.c"
        "src/aiqa_dialogue_view.c"
        "src/aiqa_hardening.c"
        "src/aiqa_language.c"
        "src/aiqa_local_command.c"
        "src/aiqa_ptt_button.c"
        "src/aiqa_state_machine.c"
        "src/aiqa_tts_pcm_buffer.c"
    INCLUDE_DIRS "include"
)
